refactor: Update OpenAIProviderImplTest with improved mocking and test coverage