@@ -14,130 +14,127 @@ import java.util.Collections;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class OpenAIProviderImplTest {
 
-    private OpenAIProviderImpl openAIProvider;
+    private static final String ASSISTANT_ID = "test-assistant-id";
+    private static final String THREAD_ID = "test-thread-id";
+    private static final String RUN_ID = "test-run-id";
+    private static final String MESSAGE = "test message";
 
     @Mock
     private RestTemplate restTemplate;
 
-    private static final String ASSISTANT_ID = "test-assistant-id";
-    private static final String THREAD_ID = "test-thread-id";
-    private static final String RUN_ID = "test-run-id";
-    private static final String TEST_MESSAGE = "test message";
+    private OpenAIProviderImpl provider;
 
     @BeforeEach
     void setUp() {
-        openAIProvider = new OpenAIProviderImpl(restTemplate, ASSISTANT_ID);
+        provider = new OpenAIProviderImpl(restTemplate, ASSISTANT_ID);
     }
 
     @Test
-    void createThread_Success() {
+    void createThread_ShouldReturnThreadId() {
         // Given
-        Map<String, String> response = Map.of("id", THREAD_ID);
+        Map<String, String> response = Collections.singletonMap("id", THREAD_ID);
         when(restTemplate.postForObject(
-            contains("/threads"),
+            eq("https://api.openai.com/v1/threads"),
             any(HttpEntity.class),
             eq(Map.class)
         )).thenReturn(response);
 
         // When
-        String result = openAIProvider.createThread();
+        String result = provider.createThread();
 
         // Then
         assertEquals(THREAD_ID, result);
     }
 
     @Test
-    void createMessageAndRun_Success() {
+    void createMessageAndRun_ShouldReturnRunId() {
         // Given
-        Map<String, String> messageResponse = Map.of("id", "msg-123");
-        Map<String, String> runResponse = Map.of("id", RUN_ID);
+        String messageUrl = "https://api.openai.com/v1/threads/" + THREAD_ID + "/messages";
+        String runUrl = "https://api.openai.com/v1/threads/" + THREAD_ID + "/runs";
+        
+        Map<String, String> messageResponse = Collections.singletonMap("id", "msg-123");
+        Map<String, String> runResponse = Collections.singletonMap("id", RUN_ID);
 
         when(restTemplate.postForObject(
-            contains("/messages"),
+            eq(messageUrl),
             any(HttpEntity.class),
             eq(Map.class)
         )).thenReturn(messageResponse);
 
         when(restTemplate.postForObject(
-            contains("/runs"),
+            eq(runUrl),
             any(HttpEntity.class),
             eq(Map.class)
         )).thenReturn(runResponse);
 
         // When
-        String result = openAIProvider.createMessageAndRun(THREAD_ID, TEST_MESSAGE);
+        String result = provider.createMessageAndRun(THREAD_ID, MESSAGE);
 
         // Then
         assertEquals(RUN_ID, result);
     }
 
     @Test
-    void getRunStatus_Success() {
+    void getRunStatus_WhenCompleted_ShouldReturnCompletedStatus() {
         // Given
-        Map<String, Object> response = Map.of(
-            "status", "completed",
-            "messages", Collections.emptyList()
-        );
+        String url = "https://api.openai.com/v1/threads/" + THREAD_ID + "/runs/" + RUN_ID;
+        Map<String, Object> response = Collections.singletonMap("status", "completed");
 
         when(restTemplate.getForObject(
-            contains("/runs/"),
+            eq(url),
             eq(Map.class)
         )).thenReturn(response);
 
         // When
-        RunStatus result = openAIProvider.getRunStatus(THREAD_ID, RUN_ID);
+        RunStatus result = provider.getRunStatus(THREAD_ID, RUN_ID);
 
         // Then
-        assertNotNull(result);
         assertEquals(RunStatus.Status.COMPLETED, result.status());
         assertTrue(result.messages().isEmpty());
     }
 
     @Test
-    void getRunStatus_InProgress() {
+    void getRunStatus_WhenInProgress_ShouldReturnInProgressStatus() {
         // Given
-        Map<String, Object> response = Map.of(
-            "status", "in_progress",
-            "messages", Collections.emptyList()
-        );
+        String url = "https://api.openai.com/v1/threads/" + THREAD_ID + "/runs/" + RUN_ID;
+        Map<String, Object> response = Collections.singletonMap("status", "in_progress");
 
         when(restTemplate.getForObject(
-            contains("/runs/"),
+            eq(url),
             eq(Map.class)
         )).thenReturn(response);
 
         // When
-        RunStatus result = openAIProvider.getRunStatus(THREAD_ID, RUN_ID);
+        RunStatus result = provider.getRunStatus(THREAD_ID, RUN_ID);
 
         // Then
-        assertNotNull(result);
         assertEquals(RunStatus.Status.IN_PROGRESS, result.status());
+        assertTrue(result.messages().isEmpty());
     }
 
     @Test
-    void getRunStatus_Failed() {
+    void getRunStatus_WhenUnknownStatus_ShouldReturnQueuedStatus() {
         // Given
-        Map<String, Object> response = Map.of(
-            "status", "failed",
-            "messages", Collections.emptyList()
-        );
+        String url = "https://api.openai.com/v1/threads/" + THREAD_ID + "/runs/" + RUN_ID;
+        Map<String, Object> response = Collections.singletonMap("status", "unknown_status");
 
         when(restTemplate.getForObject(
-            contains("/runs/"),
+            eq(url),
             eq(Map.class)
         )).thenReturn(response);
 
         // When
-        RunStatus result = openAIProvider.getRunStatus(THREAD_ID, RUN_ID);
+        RunStatus result = provider.getRunStatus(THREAD_ID, RUN_ID);
 
         // Then
-        assertNotNull(result);
-        assertEquals(RunStatus.Status.FAILED, result.status());
+        assertEquals(RunStatus.Status.QUEUED, result.status());
+        assertTrue(result.messages().isEmpty());
     }
 }
